# pic-analyzer

./: .flake8  pic-analyzer.py  pyproject.toml
.github/workflows/: python.yaml
app/: __main__.py  image_checker.py  main.py
app/routers/: checker.py
pic_analyzer/: __main__.py  image_checker.py
tests/: test_image_checker.py
tests/fixtures/: icc_profile_adobe_rgb_1998.icc  icc_profile_adobe_srgb.icc
